Fix: --sticky-header-height starts in 0 to avoid .sticky elements jumping

--- a/src/sass/materialize/components/_variables.scss
+++ b/src/sass/materialize/components/_variables.scss
@@ -71,7 +71,7 @@ $container-width: 1240px !default; // used in some @media queries
 
 @mixin css-properties{
     --static-header-height: 110px;
-    --sticky-header-height: 110px;
+    --sticky-header-height: 0;
 	--primary-color: #{$primary-color};
 	--secondary-color: #{$secondary-color};
 	--primary-color-light: color-mix( in srgb, var(--primary-color), white );
