--- a/src/sass/ultimate-fields/global.sass
+++ b/src/sass/ultimate-fields/global.sass
@@ -49,6 +49,7 @@
 .pinned-block
 	position: sticky
 	top: var(--sticky-header-height)
+	transition: 500ms top
 
 .pinned-block
 	height: fit-content
